logs/Slang/generated/keywords/5.6.2--keyword_first_match.sv.log
name: keyword_first_match
description: The 'first_match' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_first_match.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_first_match.sv:8:8: error: expected declarator
    bit first_match;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_first_match.sv:8:9: error: expected member
    bit first_match;
        ^~~~~~~~~~~
